# print-server

./: .gitignore  CLAUDE.md  Dockerfile  Print_Gateway_Server_Specification_v2.md  README.md  pyproject.toml  requirements.txt
config/: default.yaml  shop.yaml  shop.yaml.example
deployment-kit/: DEPLOY.txt  copy-to-usb.bat  deploy-from-windows.ps1  setup.sh
docker/: docker-compose.prod.yaml  docker-compose.yaml
docs/: BRUFLOW_INTEGRATION.md  USB_RESILIENCE.md  checklist.md  cli-cheatsheet.md  index.md  linux-setup.md  relocate-server.md
install/: README.md  autoinstall.yaml  meta-data  preseed.cfg  print-server.service
scripts/: bootstrap.sh  clear-wifi.sh  configure-wifi.sh  first-setup.sh  generate_test_label.py  health-check.sh  install_bare_metal.sh  revert_to_dhcp.sh  set_static_ip.sh  show-network.sh  smoke_test.sh
src/: __init__.py  config.py  main.py  routing.py  startup.py
src/api/: dependencies.py  routes.py  server.py
src/health/: __init__.py  monitor.py
src/printers/: __init__.py  base.py  brother_ql_adapter.py  cups_adapter.py  mock.py  registry.py  usb_errors.py
src/queue/: __init__.py  manager.py
src/validation/: __init__.py  document.py  image.py
tests/: __init__.py  test_api.py  test_usb_resilience.py  test_validation.py
usb-installer/: COPY-TO-USB-DEBIAN.bat  COPY-TO-USB.bat  DEPLOY-FROM-HERE.bat  FLASH-USB-DEBIAN.bat  FLASH-USB.bat  README.txt
